--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ header{
     font-weight: bold;
     margin-right: 25px;    
 }
+
+.menu a:hover{
+    color: #b65870
+}
 .center-inicial h1{
     padding-top: 35px;
     font-size: 20px;
@@ -67,10 +71,50 @@ header{
 
 main{
     display: flex; 
-    padding-top: 10px;  
+    padding-top: 10px;
 }
 
 article.img{
     width: 200px;
     height: 200px;      
 }
+
+/* --------- CSS PÁGINA SELEÇÕES -----------*/
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-content a{
+    color: #990f31;
+    background-color: #FFFFFF;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 10px;
+    
+}
+
+.dropdown-content-sel a:hover{
+    color: #b65870;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropdown{
+    background-color: #000000;
+}
+
+/* ---------------------------------------- */
