--- a/css/style.css
+++ b/css/style.css
@@ -5,44 +5,50 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.center{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 0 2%;
-}
-
 html,body{
     height: 100%;
     align-items: center;   
 }
 
 header{
-      padding: 20px 0;
+    background-color: #990f31;
+    box-sizing: content-box;
+    margin-bottom: 30px;
 }
+
+.menu li a{
+    border-radius: 10px;
+    color: white;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.menu li a:hover{
+    background-color: #a8153a;
+}
+
+.header nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.nav-links li{
+    display: inline-block;
+    margin: 0px 15px;
+}
+
 
 .logo {
-    width: 50%;      
+    width: 10%;
+    align-content: center;
+    margin-right: 100px;
+    padding: 15px;
 }
 
-.menu{
-    width: 50%;
-    text-align: right;
-    padding-top: 30px;
-    display: inline-block;
-}
 
-.menu a{
-    color:#990f31;
-    text-decoration: none;
-    font-weight: bold;
-    margin-right: 25px;    
-}
-
-.menu a:hover{
-    color: #b65870
-}
 .center-inicial h1{
     padding-top: 35px;
     font-size: 20px;
@@ -93,6 +99,7 @@ article.img{
 }
 
 .dropdown-content{
+    background-color: #FFFFFF;
     display: none;
     position: absolute;
     min-width: 160px;
@@ -107,14 +114,16 @@ article.img{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    border-radius: 10px;
-    
+    border-radius: 5px; 
+}
+
+.dropdown-content a:hover{
+    background-color: #990f31;
+    color: #FFFFFF;
 }
 
 .dropdown-content-sel a:hover{color: #b65870;}
-
 .dropdown:hover .dropdown-content {display: block;}
-
 .dropdown:hover .dropdown{background-color: #000000;}
 
 .main-pg-default{
@@ -197,5 +206,39 @@ article.img{
     font-style: normal;
 }
 #table-sel tr:nth-child(even) {background-color: #dddddd;}
+
+/* ---------------------------------------- */
+
+/* CSS FOOTER */
+footer{
+    background-color: #990f31;
+    margin: 0 auto;
+    align-content: center;
+    text-align: center;
+    padding: 30px;
+    color: #FFFFFF;
+}
+
+.ol-footer{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+}
+
+.ol-footer li{
+    display: inline-block;
+    padding: 11px;
+    text-align: center;
+}
+
+.p-footer{
+    margin-top: 15px;
+}
+
+#senac-logo-footer{
+    width: 10%;
+}
 
 /* ---------------------------------------- */
