--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,29 @@ article.img{
 /* ---------------------------------------- */
 
 /* CSS PÁGINA GRUPOS */
-
+#grupos{
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    border-collapse: collapse;
+}
+#grupos th, td{
+    padding: 5px;
+}
+#grupos th{
+    color: white;
+    background-color: #a8153a;
+    font-family: depot-new-condensed-web,sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    font-style: normal;
+}
+#grupos td{
+    font-family: depot-new-condensed-web,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    font-style: normal;
+}
 
 /* ---------------------------------------- */
 
