--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,7 @@ main{
     font-style: normal;
 }
 #grupos td{
+    background-color;
     font-family: depot-new-condensed-web,sans-serif;
     font-weight: 300;
     font-size: 20px;
