--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,7 @@ aside{
     font-weight: 300;
     font-size: 20px;
     font-style: normal;
+    background-color: #3952A7;
 }
 .listgrupo{
     list-style-type: none;
