--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ aside{
     padding: 300px;
     text-align: center;
     position: relative;
-    width: ;
 }
 
 .center-inicial h1{
@@ -310,7 +309,12 @@ aside{
 }
 .listgrupo{
     list-style-type: none;
+}
 
+.listgrupo li{
+    font-family: depot-new-condensed-web, sans-serif;
+    font-style: normal;
+    font-weight: lighter;
 }
 
 /* ---------------------------------------- */
