--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ aside{
     font-weight: 300;
     font-size: 20px;
     font-style: normal;
-    background-color: #3952A7;
+    background-color: #13b31b;
 }
 .listgrupo{
     list-style-type: none;
